--- a/css/style.css
+++ b/css/style.css
@@ -3,104 +3,64 @@
 @import url("https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css");
 
 .hidden {
-    /* this class is used to temporarily hide finished sections' visualization */
     display: none !important;
 }
 
 body {
-    margin: 0;
-    line-height: 1.5;
     font-size: 16px;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 400;
+    line-height: 1.5;
+
+    margin: 0;
 }
 
 * {
-    margin: 0;
-    padding: 0;
     outline: none;
     text-decoration: none;
     box-sizing: border-box;
+
+    margin: 0;
+    padding: 0;
 }
 
-::before,::after{
+::before, ::after {
     box-sizing: border-box;
-    }
-    
-input, textarea, select{
-    font-family: 'Ubuntu', sans-serif;
 }
 
 .section {
     background-color: #FFFFFF;
     min-height: 100vh;
-    /* browser's height */
     display: block;
     position: fixed;
     overflow-x: hidden;
     overflow-y: auto;
-    /*set scrollbar if and only if content overflows*/
     opacity: 1;
     z-index: 0;
-    /* sections must be the last layer */
+    
     left: 180px;
     top: 0;
     right: 0;
     bottom: 0;
     padding: 0 30px;
-    /* -webkit-transition: all 0.3s ease; */
-    /* transition: all 0.3s ease; */
 }
-
-.section.back-section{
-	z-index: 1;
-}
-
-.section.active{
-	opacity: 1;
-	z-index: 2;
-	-webkit-animation: slideSection 1s ease;
-	animation: slideSection 1s ease;
-}
-
-@-webkit-keyframes slideSection{
-	0%{
-		-webkit-transform: translateX(100%);
-		transform: translateX(100%);
-	}
-	100%{
-		-webkit-transform: translateX(0%);
-		transform: translateX(0%);
-	}
-}
-
-@keyframes slideSection{
-	0%{
-		-webkit-transform: translateX(100%);
-		transform: translateX(100%);
-	}
-	100%{
-		-webkit-transform: translateX(0%);
-		transform: translateX(0%);
-	}
-}
-
-/* sections title config */
 
 .section-title {
     text-transform: capitalize;
-    -ms-flex: 0 0 100%;
+
     flex: 0 0 100%;
+    -ms-flex: 0 0 100%;
     max-width: 100%;
     margin-bottom: 60px;
 }
 
 .section-title h2 {
-    font-size: 30px;
-    color: #2C001E;
     font-family: 'Ubuntu', sans-serif;
-    margin: 0;
+    color: #2C001E;
+    font-size: 30px;
+
     position: relative;
+    margin: 0;
 }
 
 .section-title h2::before {
@@ -108,6 +68,7 @@ input, textarea, select{
     background-color: #CCCCCC;
     height: 3px;
     width: 50px;
+    
     position: absolute;
     top: 100%;
     left: 0;
@@ -118,6 +79,7 @@ input, textarea, select{
     background-color: #CCCCCC;
     height: 3px;
     width: 25px;
+    
     position: absolute;
     top: 100%;
     left: 0;
@@ -127,6 +89,7 @@ input, textarea, select{
 .container {
     max-width: 1100px;
     width: 100%;
+
     margin: auto;
 }
 
@@ -135,14 +98,49 @@ input, textarea, select{
     padding-bottom: 15px;
 }
 
+.section.back-section {
+	z-index: 1;
+}
+
+.section.active {
+    z-index: 2;
+	opacity: 1;
+
+	animation: slideSection 1s ease;
+	-webkit-animation: slideSection 1s ease;
+}
+
+@keyframes slideSection {
+	0%{
+        transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+	}
+	100%{
+        transform: translateX(0%);
+		-webkit-transform: translateX(0%);
+	}
+}
+
+@-webkit-keyframes slideSection {
+	0%{
+        transform: translateX(100%);
+		-webkit-transform: translateX(100%);
+	}
+	100%{
+        transform: translateX(0%);
+		-webkit-transform: translateX(0%);
+	}
+}
+
 .row {
+    position: relative;
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    
     margin-right: -15px;
     margin-left: -15px;
-    position: relative;
 }
 
 .padd-15 {
@@ -150,48 +148,40 @@ input, textarea, select{
     padding-right: 15px;
 }
 
-
 /* NAV BAR */
-
 .aside {
+    background-color: #F7F7F7;
     width: 180px;
     height: 100%;
-    background-color: #F7F7F7;
-    border-right: 2px solid #CCCCCCaa;
-    position: fixed;
-    z-index: 11;
-    left: 0;
-    top: 0;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-}
+    z-index: 10;
+    border-right: 2px solid #b3aeaeaa;
 
-.aside .aside-content {
-    position: absolute;
+    position: fixed;
     left: 0;
     top: 0;
-    width: 100%;
-    height: 100%;
-    padding: 30px;
-    overflow-y: auto;
+    
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
 }
 
 .aside .nav-toggler {
+    display: none;
+    background-color: #fdf9ff;
     height: 40px;
     width: 45px;
+    z-index: 11;
+    border-radius: 5px;
     border: 1px solid #d4d4e3;
     cursor: pointer;
+
     position: fixed;
     left: 300px;
     top: 20px;
-    z-index: 11;
-    border-radius: 5px;
-    background-color: #fdf9ff;
-    display: none;
     -ms-flex-align: center;
     align-items: center;
     -ms-flex-pack: center;
     justify-content: center;
+
     -webkit-transition: all 0.3s ease;
     transition: all 0.3s ease;
 }
@@ -199,6 +189,7 @@ input, textarea, select{
 .aside .nav-toggler span {
     height: 2px;
     width: 18px;
+    
     display: inline-block;
     position: relative;
 }
@@ -211,40 +202,56 @@ input, textarea, select{
     content: '';
     height: 2px;
     width: 18px;
+
     position: absolute;
     top: -6px;
     left: 0;
-}
-
-.aside .nav-toggler.open span::before {
-    -webkit-transform: rotate(45deg);
-    transform: rotate(45deg);
-    top: 0px;
-}
-
-.aside .nav-toggler.open span::after {
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    top: 0px;
 }
 
 .aside .nav-toggler span::after {
     content: '';
     height: 2px;
     width: 18px;
+
     position: absolute;
     top: 6px;
     left: 0;
 }
 
+.aside .nav-toggler.open span::before {
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
+    
+    top: 0;
+}
+
+.aside .nav-toggler.open span::after {
+    transform: rotate(-45deg);
+    -webkit-transform: rotate(-45deg);
+
+    top: 0;
+}
+
 .aside .nav-toggler span,
 .aside .nav-toggler span::before,
-.aside .nav-toggler span::after{
+.aside .nav-toggler span::after {
     background-color: #E95420;
+}
+
+.aside .aside-content {
+    width: 100%;
+    height: 100%;
+    overflow-y: auto;
+
+    position: absolute;
+    left: 0;
+    top: 0;
+    padding: 30px;
 }
 
 .aside .nav {
     list-style: none;
+
     margin: 180px 0 50px;
 }
 
@@ -255,14 +262,16 @@ input, textarea, select{
 .aside .nav li a {
     font-size: 18px;
     color: #2C001E;
-    border-bottom: 1.5px solid #CCCCCCaa;
+    line-height: 35px;
     text-decoration: none;
     text-transform: capitalize;
+    border-bottom: 1.5px solid #CCCCCCaa;
+    
     display: block;
     margin: 25px 0;
-    line-height: 35px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
+
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
 }
 
 .aside .nav li a:not(.active):hover {
@@ -274,6 +283,7 @@ input, textarea, select{
     font-size: 16px;
     font-weight: 620;
     color: #5E2750aa;
+
     margin: auto;
 }
 
@@ -288,12 +298,11 @@ input, textarea, select{
 
 
 /* HOME SECTION */
-
 .home {
     min-height: 100vh;
-    display: -ms-flexbox;
-    /*vendor prefix for Microsoft browsers*/
+    
     display: flex;
+    display: -ms-flexbox;
 }
 
 .home .intro {
@@ -304,12 +313,14 @@ input, textarea, select{
     height: 200px;
     width: 200px;
     border-radius: 50%;
+
     display: inline-block;
 }
 
 .home .intro h1 {
     font-size: 30px;
     color: #2C001E;
+
     margin: 20px 0 5px;
 }
 
@@ -318,51 +329,55 @@ input, textarea, select{
 }
 
 .home .intro .social-links a {
+    background-color: #E95420;
+    color: white;
     height: 35px;
     width: 35px;
     line-height: 35px;
     border-radius: 50%;
-    color: white;
-    background-color: #E95420;
+
     display: inline-block;
     margin: 0 5px;
-    -webkit-transition: all 0.3s ease;
+
     transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
 }
 
 .home .intro .social-links a:hover {
-    -webkit-transform: scale(1.2);
     transform: scale(1.2);
+    -webkit-transform: scale(1.2);
 }
 
 .home .intro p {
     font-size: 16px;
     line-height: 15px;
     color: #2C001E;
-    margin-top: 120px;
+
+    margin-top: 60px;
 }
 
 
 /* ABOUT SECTION */
-
 .about .about-content {
-    /* background-color: red; */
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
     max-width: 100%;
+    
+    flex: 0 0 100%;
+    -ms-flex: 0 0 100%;
 }
 
 .about .about-content .about-text {
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
     max-width: 100%;
+
+    flex: 0 0 100%;
+    -ms-flex: 0 0 100%;
 }
 
 .about .about-content .about-text h3 {
     font-size: 24px;
-    margin-bottom: 15px;
-    font-weight: 700;
     color: #2C001E;
+    font-weight: 700;
+
+    margin-bottom: 15px;
 }
 
 .about .about-content .about-text span {
@@ -371,100 +386,110 @@ input, textarea, select{
 
 .about .about-content .about-text p {
     font-size: 18px;
-    line-height: 25px;
     color: #2C001E;
+    line-height: 25px;
+
     margin: 0;
 }
 
 .about .about-content .personal-info {
-    -ms-flex: 0 0 60%;
-    flex: 0 0 60%;
     max-width: 50%;
+    flex: 0 0 60%;
+    -ms-flex: 0 0 60%;
+
     margin-top: 40px;
 }
 
 .about .about-content .personal-info .info-item {
+    max-width: 50%;
+
     -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    max-width: 50%;
 }
 
 .about .about-content .personal-info .info-item p {
-    font-weight: 600;
-    padding: 10px 0;
     font-size: 17px;
     color: #2C001E;
+    font-weight: 600;
     border-bottom: 1.5px solid #CCCCCCaa;
+
+    padding: 10px 0;
 }
 
 .about .about-content .personal-info .info-item p span {
-    color: #2C001E;
-    margin-left: 4px;
-    font-weight: 380;
     display: inline-block;
+    color: #2C001E;
+    font-weight: 380;
+
+    margin-left: 4px;
 }
 
 .about .about-content .personal-info .buttons {
     margin-top: 30px;
-    /* margin: 30px auto 0; */
 }
 
 .about .about-content .personal-info .buttons .btn {
     background-color: #E95420;
+
     margin-right: 15px;
     margin-top: 10px;
 }
 
 .btn {
+    display: inline-block;
     font-family: 'Ubuntu', sans-serif;
     font-weight: 380;
-    padding: 12px 35px;
     color: #ffffff;
-    border-radius: 40px;
-    -webkit-transition: all 0.3s ease;
-    transition: all 0.3s ease;
-    display: inline-block;
-    white-space: nowrap;
     border: none;
+    border-radius: 40px;
     cursor: pointer;
+    
+    padding: 12px 35px;
+    
+    transition: all 0.4s ease;
+    -webkit-transition: all 0.4s ease;
 }
 
 .btn:hover {
-    -webkit-transform: scale(1.1);
     transform: scale(1.1);
+    -webkit-transform: scale(1.1);
 }
 
 .about .about-content .skills {
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
     max-width: 50%;
-    margin-top: 15px;
+    flex: 0 0 50%;
+    -ms-flex: 0 0 50%;
+
+    margin-top: 35px;
 }
 
 .about .about-content .skills .skills-title {
-    color: #FFFFFF;
     background-color: #77216F;
-    padding: 8px;
-    border-radius: 7px;
+    color: #FFFFFF;
     width: 200px;
+    border-radius: 7px;
     text-align: center;
-    margin: 0 auto 24px;
+    
+    padding: 8px;
+    margin: 0 auto 20px;
 }
 
 .about .about-content .skills .skill-item {
-    padding: 7px;
+    max-width: 80%;
     border-radius: 2px;
     border: 2px solid #CCCCCCaa;
-    -ms-flex: 0 0 100%;
     flex: 0 0 100%;
-    max-width: 80%;
+    -ms-flex: 0 0 100%;
+    
+    padding: 7px;
     margin: 0 auto 10px;
 }
 
 .about .about-content .skills .skill-item p {
-    font-weight: 400;
     font-size: 17px;
+    font-weight: 400;
     color: #000000;
+
     margin: 1px 0;
 }
 
@@ -473,89 +498,88 @@ input, textarea, select{
     font-weight: 600;
 }
 
+.about .about-content .education,
 .about .about-content .certifications {
-    -ms-flex: 0 0 50%;
-    flex: 0 0 50%;
     max-width: 50%;
-    margin-top: 30px;
-}
-
-.about .about-content .education {
-    -ms-flex: 0 0 50%;
     flex: 0 0 50%;
-    max-width: 50%;
+    -ms-flex: 0 0 50%;
+    
     margin-top: 30px;
 }
 
 .about .about-content h3.title {
     font-size: 24px;
-    margin-bottom: 10px;
     font-weight: 700;
     color: #2C001E;
+
+    margin-bottom: 10px;
 }
 
 .about .about-content .timeline-box {
-    /* background-color: red; */
-    -ms-flex: 0 0 100%;
-    flex: 0 0 100%;
     max-width: 100%;
+    flex: 0 0 100%;
+    -ms-flex: 0 0 100%;
 }
 
 .about .about-content .timeline {
+    width: 100%;
     background-color: #F7F7F7;
-    padding: 15px 15px;
     border: 2px solid #CCCCCCaa;
     border-radius: 10px;
-    width: 100%;
+    padding: 15px 15px;
+
     position: relative;
-    /* height: 928px; */
 }
 
 .about .about-content .timeline .timeline-item {
-    position: relative;
     padding-left: 37px;
     padding-bottom: 25px;
+    
+    position: relative;
 }
 
 .about .about-content .timeline .timeline-item:last-child {
     /* last item should have no padding at bottom */
-    padding-bottom: 0px;
+    padding-bottom: 0;
 }
 
 .about .about-content .timeline .timeline-title {
-    font-weight: 700;
     font-size: 19px;
-    margin-bottom: 8px;
-    text-transform: capitalize;
     color: #2C001E;
+    font-weight: 700;
+    text-transform: capitalize;
+    
+    margin-bottom: 8px;
 }
 
 .about .about-content .timeline .timeline-item::before {
-    background-color: #E95420;
     content: '';
+    background-color: #E95420;
     width: 2px;
-    position: absolute;
     height: 100%;
+
+    position: absolute;
     left: 7px;
     top: 0;
 }
 
 .about .about-content .timeline .circle-dot {
     background-color: #E95420;
-    position: absolute;
-    left: 0;
-    top: 0px;
     height: 15px;
     width: 15px;
-    left: 0px;
     border-radius: 50%;
+    
+    position: absolute;
+    left: 0;
+    top: 0;
 }
 
 .about .about-content .timeline .timeline-date {
     font-size: 14px;
     font-weight: 400;
-    margin-bottom: 12px;
     color: #2C001E;
+
+    margin-bottom: 12px;
 }
 
 .about .about-content .timeline .timeline-date .fa {
@@ -570,49 +594,53 @@ input, textarea, select{
     font-size: 16px;
     line-height: 25px;
     color: #2C001E;
+
     margin: 0;
 }
 
-
-/* projetcs section */
-
+/* PROJECT SECTION */
 .project .container {
     padding-bottom: 40px;
 }
 
 .project .project-item {
-    -ms-flex: 0 0 33.33%;
-    flex: 0 0 33.33%;
-    max-width: 33.33%;
-    margin-bottom: 30px;
-    display: -ms-flexbox;
+    max-width: 50%;
     display: flex;
+    display: -ms-flexbox;
+    flex: 0 0 50%;
+    -ms-flex: 0 0 50%;
+
+    margin-bottom: 30px;
 }
 
 .project .project-item .project-item-inner {
+    text-align: center;
     background-color: #fdf9ff;
     border: 1px solid #d4d4e3;
     border-radius: 10px;
+    
     padding: 30px 15px;
-    text-align: center;
-    -webkit-transition: all 0.3s ease;
+
     transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
 }
 
 .project .project-item .project-item-inner:hover {
+    box-shadow: 0 0 11px grey;
     -webkit-box-shadow: 0 0 20px rgb(48, 46, 77, 0.15);
-    box-shadow: 0px 0px 11px grey;
 }
 
 .project .project-item .project-item-inner .icon {
+    display: block;
+    text-align: center;
     height: 60px;
     width: 60px;
-    display: block;
-    margin: 0 auto 30px;
-    text-align: center;
     border-radius: 50%;
-    -webkit-transition: all 0.3s ease;
+
+    margin: 0 auto 30px;
+    
     transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
 }
 
 .project .project-item .project-item-inner .icon .fa,
@@ -628,8 +656,9 @@ input, textarea, select{
 .project .project-item .project-item-inner .icon .fas {
     font-size: 40px;
     line-height: 60px;
-    -webkit-transition: all 0.3s ease;
+
     transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
 }
 
 .project .project-item .project-item-inner:hover .icon .fa,
@@ -639,17 +668,19 @@ input, textarea, select{
 }
 
 .project .project-item .project-item-inner h4 {
-    font-size: 18px;
-    margin-bottom: 15px;
     color: #302e4d;
+    font-size: 18px;
     font-weight: 700;
     text-transform: capitalize;
+
+    margin-bottom: 15px;
 }
 
 .project .project-item .project-item-inner p {
     font-size: 16px;
-    color: #504e70;
     line-height: 25px;
+    color: #504e70;
+    
     margin: 0;
 }
 
@@ -659,36 +690,38 @@ input, textarea, select{
 		padding-top: 70px;
 	}
 	.aside .nav-toggler{
-		display: -ms-flexbox;
 		display: flex;
+		display: -ms-flexbox;
+
 		left: 30px;
 	}
 	.aside .nav-toggler.open{
 		left: 300px;
 	}
 	.aside{
-		left: -270px;
+		left: -180px;
 	}
 	.aside.open{
-		left: 0px;
+		left: 0;
 	}
 	.section{
 		left: 0;
 	}
 	.section.open{
-		left: 270px;
+		left: 180px;
 	}
 	.about .about-content .personal-info .info-item p span{
 		display: block;
+        
 		margin-left: 0;
 	}
 }
 
 @media (max-width: 991px){
 .project .project-item{
-	-ms-flex: 0 0 50%;
-	flex: 0 0 50%;
 	max-width: 50%;
+    flex: 0 0 50%;
+	-ms-flex: 0 0 50%;
 }
 }
 
@@ -698,8 +731,8 @@ input, textarea, select{
 	.about .about-content .education,
 	.about .about-content .skills,
 	.about .about-content .personal-info{
-		-ms-flex: 0 0 100%;
-		flex: 0 0 100%;
 		max-width: 100%;
+        flex: 0 0 100%;
+		-ms-flex: 0 0 100%;
 	}
 }
