--- a/css/style.css
+++ b/css/style.css
@@ -166,7 +166,7 @@ body {
 
 .aside .nav-toggler {
     display: none;
-    background-color: #fdf9ff;
+    background-color: #F7F7F7;
     height: 40px;
     width: 45px;
     z-index: 11;
@@ -487,7 +487,7 @@ body {
 .about .about-content .skills .skill-item p {
     font-size: 17px;
     font-weight: 400;
-    color: #000000;
+    color: #2C001E;
 
     margin: 1px 0;
 }
@@ -667,7 +667,7 @@ body {
 }
 
 .project .project-item .project-item-inner h4 {
-    color: #302e4d;
+    color: #2C001E;
     font-size: 18px;
     font-weight: 700;
     text-transform: capitalize;
@@ -678,7 +678,7 @@ body {
 .project .project-item .project-item-inner p {
     font-size: 16px;
     line-height: 25px;
-    color: #504e70;
+    color: #2C001E;
     
     margin: 0;
 }
@@ -705,7 +705,7 @@ body {
 .contact .contact-info-item h4{
 	font-size: 18px;
 	font-weight: 700;
-	color: #302e4d;
+	color: #2C001E;
 	text-transform: capitalize;
 	
     margin: 15px 0 5px;
@@ -715,7 +715,7 @@ body {
 	font-size: 16px;
 	font-weight: 400;
 	line-height: 25px;
-	color: #504e70;
+	color: #2C001E;
 	
     margin: 0;
 }
@@ -751,7 +751,7 @@ body {
 	border-radius: 25px;
 	border: 1px solid #d4d4e3;
 	font-size: 16px;
-	color: #504e70;
+	color: #2C001E;
 	
     padding: 10px 25px;
 
