--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,8 @@ body {
     line-height: 15px;
     color: #2C001E;
 
-    margin-top: 60px;
+    margin-top: 40px;
+    /* margin-top: 60px; */
 }
 
 
